--- a/views/home.hbs
+++ b/views/home.hbs
@@ -7,7 +7,7 @@
 
 
     <div class="jumbotron">
-        <h1 class="display-4">Hello, {{ capitalizar nombre }} mmv se le quiere {{'<3'}} !</h1>
+        <h1 class="display-4">Hello, {{ capitalizar nombre }} se le quiere :3  !</h1>
         <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
         <hr class="my-4">
         <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
